--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link ref="stylesheet"href="style.css">
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HarryFitness - The best fitness gym in the town</title>
+    <title>longlifeFitness - The best fitness gym in the town</title>
+<!-- this is created by Roshni -->
     <link rel="stylesheet" href="style.css">
     
     <link rel="stylesheet" href="utils.css">
@@ -164,11 +156,8 @@
             </section>
             <hr>
         </main>
-       
-    </div>
-</body>
-    <footer>This code belongs to Roshni..</footer>
+          <footer>This code belongs to Roshni..</footer>
 
-</html>
+    </div>
 </body>
 </html>
