--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
             </section>
             <hr>
         </main>
-          <footer>This code belongs to Roshni..</footer>
+          <footer>
+              Copyright © 2024. All rights reserved by Roshni Patil
+              </footer>
 
     </div>
 </body>
